# Basler_camera

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
basler/: configuration.md  index.md
docs/: accelerometer.md  acquisition.md  ai.md  analysis.md  brazil-nut.md  calibration.md  camera.md  configuration.md  convection.md  dataset.md  development.md  experiment.md  export.md  getting-started.md  gui.md  hardware.md  index.md  monitor.md  packing.md  preview.md  publishing.md  qa.md  recorder.md  segregation.md
src/glas/: __init__.py  accelerometer.py  acquisition.py  calibration.py  camera.py  camera_info.py  camera_validator.py  cli.py  config.py  controller.py  dataset.py  display.py  exceptions.py  experiment.py  export.py  frame.py  logger.py  metadata.py  monitor.py  plotting.py  preview.py  qa.py  recorder.py  report.py  ringbuffer.py  settings.py  stats.py  timestamps.py  version.py  writer.py
src/glas/ai/: __init__.py  annotation.py  dependencies.py  sam2_segmenter.py  sam2_train.py  yolo_detector.py  yolo_train.py
src/glas/analysis/: __init__.py  brazil_nut.py  comparison.py  convection.py  packing.py  particle_tracking.py  segregation.py  tracking_utils.py
src/glas/gui/: __init__.py  ai_dialog.py  app.py  logging_bridge.py  main_window.py  status_indicators.py  theme.py
src/glas/gui/viewmodels/: __init__.py  analysis_viewmodel.py  camera_viewmodel.py  dataset_viewmodel.py  hardware_status_viewmodel.py  live_feed_viewmodel.py  recording_viewmodel.py
src/glas/gui/widgets/: __init__.py  analysis_panel_widget.py  camera_controls_widget.py  dataset_browser_widget.py  experiment_metadata_widget.py  hardware_status_widget.py  live_preview_widget.py  log_console_widget.py  recording_controls_widget.py
src/glas/hardware/: __init__.py  daq.py  oscilloscope.py  scpi.py  shaker.py  waveform_generator.py
test/: test_ai_sam2_train.py  test_brazil_nut.py  test_camera_info.py  test_camera_validator.py  test_cli.py  test_controller.py  test_daq.py  test_exceptions.py  test_experiment.py  test_gui_analysis_viewmodel.py  test_gui_recording_viewmodel.py  test_metadata.py  test_plotting.py  test_qa.py  test_recorder.py  test_scpi.py  test_timestamps.py
tests/: conftest.py  test_accelerometer.py  test_acquisition.py  test_ai_annotation.py  test_ai_dependencies.py  test_ai_sam2_segmenter.py  test_ai_yolo_detector.py  test_ai_yolo_train.py  test_calibration.py  test_camera.py  test_camera_validator.py  test_cli.py  test_cli_ai.py  test_cli_gui.py  test_cli_phase20.py  test_cli_record.py  test_cli_trigger.py  test_comparison.py  test_config.py  test_controller.py  test_convection.py  test_dataset.py  test_display.py  test_exceptions.py  test_experiment.py  test_export.py  test_frame.py  test_gui_ai_dialog.py  test_gui_analysis_panel_widget.py  test_gui_app.py  test_gui_camera_controls_widget.py  test_gui_camera_viewmodel.py  test_gui_dataset_browser_widget.py  test_gui_dataset_viewmodel.py  test_gui_experiment_metadata_widget.py  test_gui_hardware_status_viewmodel.py  test_gui_hardware_status_widget.py  test_gui_live_feed_viewmodel.py  test_gui_live_preview_widget.py  test_gui_log_console_widget.py  (+23 more)
