[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glas"
version = "2.5.0"
description = "GLAS: Granular Lab Acquisition System -- acquisition and analysis platform for a Basler ace acA640-750um camera used in granular-material physics research."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "GLAS Project Contributors" },
]
keywords = ["basler", "camera", "granular-materials", "physics", "acquisition"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "rich>=13.7",
    "typer>=0.12",
    "pypylon>=3.0",
    "numpy>=1.24",
    "h5py>=3.10",
    "opencv-python>=4.9",
    "psutil>=5.9",
    "pillow>=10.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
ai = [
    "torch>=2.2",
    "ultralytics>=8.3",
    "sam2>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-psutil",
    "PySide6>=6.6",
    "torch>=2.2",
    "ultralytics>=8.3",
    "sam2>=1.1",
]

[project.urls]
Homepage = "https://github.com/bshrestha-1/basler_camera"
Changelog = "https://github.com/bshrestha-1/basler_camera/blob/main/CHANGELOG.md"

[project.scripts]
glas = "glas.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
glas = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    # pypylon's SWIG bindings, not our code.
    "ignore:builtin type Swig.*has no __module__ attribute:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/glas"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.per-file-ignores]
# Typer requires typer.Option(...)/typer.Argument(...) calls as argument
# defaults; that is the documented, required usage pattern, not a bug.
"src/glas/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
packages = ["glas"]
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
# pypylon ships no type stubs (no py.typed marker).
module = "pypylon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# h5py ships no type stubs (no py.typed marker) in the installed version.
module = "h5py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# labjack-ljm and nidaqmx are optional, lazily-imported vendor SDKs (see
# glas.hardware.daq) -- neither is a hard GLAS dependency, and neither
# ships type stubs.
module = ["labjack.*", "nidaqmx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# sam2 is an optional, lazily-imported AI dependency (see glas.ai) that
# ships no py.typed marker.
module = "sam2.*"
ignore_missing_imports = true
